--- a/stylesheets/master.css
+++ b/stylesheets/master.css
@@ -76,3 +76,21 @@ body {
   -ms-font-feature-settings: "lnum";
   -webkit-font-feature-settings: "lnum";
   font-feature-settings: "lnum"; }
+
+  body{
+    font-family: sans-serif;
+  }
+
+h1 {
+  font-size: 2em;
+  font-weight:700;
+}
+
+h2{
+  font-size: 1.5em;
+  font-style: italic;
+}
+p{
+  background-color: #bbb;
+  padding: 25px; 
+}
